<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorCardsBackground"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diag_cff_title"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/dialog_radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/arquivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/diag_cff_file"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/pasta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/diag_cff_folder"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/dialog_cnff_editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/general_01"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cnff_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#00000000"
            android:text="@string/general_03"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/dialog_cnff_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#00000000"
            android:text="@string/general_02"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>