<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorCardsBackground">

        <LinearLayout
            android:id="@+id/linearFinishInfos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diag_p_information"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/diag_progress_totalfiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="Total de arquivos: 5."
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/diag_progress_successText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Removidos com sucesso: 4."
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/diag_progress_errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Erros ao remover: 1."
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/diag_progress_btn_close"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0"
                android:background="@drawable/button_concept"
                android:text="@string/general_04"
                android:textColor="@color/colorBottonMenuItens" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/diag_progress_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diag_p_title"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/diag_progress_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/diag_progress_barinfo"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="300dp"
                android:layout_height="10dp"
                android:max="100"
                android:progress="20"
                android:progressDrawable="@drawable/progress_bar_states"
                android:progressTint="@color/colorPrimary" />

            <Button
                android:id="@+id/diag_progress_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0"
                android:background="@drawable/button_concept"
                android:text="@string/general_03"
                android:textColor="@color/colorBottonMenuItens" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>