<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundApp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/general_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:visibility="visible">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewInfos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/colorCardsBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frag_home_generalinfo"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textTitlePgbRam"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Uso de memória(RAM)"
                                android:textColor="@color/colorPrimary" />

                            <ProgressBar
                                android:id="@+id/progressBar_Ram"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:max="100"
                                android:progress="20"
                                android:progressDrawable="@drawable/progress_bar_states"
                                android:progressTint="@color/colorPrimary" />

                        </LinearLayout>
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textTitlePgbDiskInternal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Armazenamento interno(89%)"
                                android:textColor="@color/colorPrimary" />

                            <ProgressBar
                                android:id="@+id/progressBar_DiskInternal"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:max="100"
                                android:progress="60"
                                android:progressDrawable="@drawable/progress_bar_states"
                                android:progressTint="@color/colorPrimary" />

                        </LinearLayout>
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/frameLExternal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textTitlePgbDiskExternal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Armazenamento externo(10%)"
                                android:textColor="@color/colorPrimary" />

                            <ProgressBar
                                android:id="@+id/progressBar_DiskExternal"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:max="100"
                                android:progress="88"
                                android:progressDrawable="@drawable/progress_bar_states"
                                android:progressTint="@color/colorPrimary" />

                        </LinearLayout>
                    </FrameLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardInternal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/colorCardsBackground"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="@+id/cardViewInfos"
                app:layout_constraintStart_toStartOf="@+id/cardViewInfos"
                app:layout_constraintTop_toBottomOf="@+id/cardViewInfos">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="35dp"
                            android:layout_height="55dp"
                            android:layout_weight="0"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/ic_internal" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/frag_home_internal"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/frag_home_way"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                app:cardBackgroundColor="@color/colorPrimary"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:id="@+id/frag_home_internalway"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="5dp"
                                    android:singleLine="true"
                                    android:text="TextView"
                                    android:textColor="@color/colorBottonMenuItens" />

                            </androidx.cardview.widget.CardView>

                            <ImageView
                                android:id="@+id/frag_home_edit_internal"
                                android:layout_width="15dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0"
                                android:adjustViewBounds="true"
                                android:scaleType="fitCenter"
                                app:srcCompat="@drawable/ic_editway" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0"
                            android:gravity="bottom|end"
                            android:text="@string/frag_home_open"
                            android:textAlignment="gravity"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardExternal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/colorCardsBackground"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardViewInfos"
                app:layout_constraintStart_toStartOf="@+id/cardViewInfos"
                app:layout_constraintTop_toBottomOf="@+id/cardInternal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageddView3"
                            android:layout_width="35dp"
                            android:layout_height="55dp"
                            android:layout_weight="0"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_external" />

                        <TextView
                            android:id="@+id/texaaatView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/frag_home_external"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textdddView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:text="@string/frag_home_way"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                app:cardBackgroundColor="@color/colorPrimary"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:id="@+id/frag_home_externalway"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="5dp"
                                    android:singleLine="true"
                                    android:text="TextView"
                                    android:textColor="@color/colorBottonMenuItens" />

                            </androidx.cardview.widget.CardView>

                            <ImageView
                                android:id="@+id/frag_home_edit_external"
                                android:layout_width="15dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0"
                                android:adjustViewBounds="true"
                                android:scaleType="fitCenter"
                                app:srcCompat="@drawable/ic_editway" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textViewdd8"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0"
                            android:gravity="bottom|end"
                            android:text="@string/frag_home_open"
                            android:textAlignment="gravity"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>